# Intellicrack

./: .clang-format  .codeqlignore  .coveragerc  .darglint  .editorconfig  .env.example  .env.production  .envrc  .gitignore  .intellicrack_scan_cache.json  .pipreqsignore  .pnp.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.json  .pylintrc  .readthedocs.yaml  .rooignore  .ruff.toml  .rumdl.toml  .secrets.baseline  .sourcery.yaml  .yamllint  40_KEYGEN_GENERATOR_TEST_REPORT.md  40_SAMPLE_VERIFICATION_REPORT.md  ACTIVE_TASK.md  AGENTS.md  AGENT_55_REPORT.md  AGENT_58_QEMU_MANAGER_TESTS_REPORT.md  ANALYSIS_TODO2_REVIEW_COMPLETE.md  ASLR_FIX_IMPLEMENTATION.md  ASLR_FIX_SUMMARY.md  ActiveTask.md  BATCH_3_VERIFICATION_REPORT.md  BATCH_4_VERIFICATION_REPORT.md  BATCH_5_VERIFICATION_REPORT.md  BATCH_6_VERIFICATION_REPORT.md  BATCH_7_VERIFICATION_REPORT.md  BaseDetector_Coverage_Report.md  (+448 more)
.cargo/: config.toml
.claude/: settings.local.json  statusline.js
.fleet/: settings.json
.github/: CLAUDE_TYPE_FIXER_QUICKSTART.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.grok/: settings.json
CLI Coding/: Aider.ps1  Grok.ps1  Kimi.ps1  Kiro.ps1  OpenCode.ps1  Qodo.ps1  UpdateTools.ps1
Screenshots/: Screenshots.lnk
adobe_injector_src/: adobe_bypass_frida.js  adobe_full_auto_injector.py
backup_synthetic_models/: create_ml_model_synthetic.py
config/: .env.example
data/: protocol_signatures.json
dependencies/: Fix_Angr_Dependencies.bat  INSTALL.bat  Install-Debug.ps1  Install.ps1  Install_Ghidra_Decompiler.bat  Install_Radare2_Disassembler.bat  Install_System_Tools.bat  README.md  Test-Install.bat  Verify_Installation_Status.bat  __init__.py  config_path_discovery.patch  create_clean_env.py  fix_dependencies.py  fix_tool_paths.py  install_dependencies.py  quick_fix_dependencies.py  requirements.txt  test_dependencies.py
dev/: .license-header.txt  ASSET_VERIFICATION_REPORT.md  CLI_IMPORT_ANALYSIS.md  CLI_IMPROVEMENT_PLAN.md  COMPLETE_ASSET_VERIFICATION.md  DUPLICATE_CODE_FIXES_SUMMARY.md  DYNAMIC_PATH_DISCOVERY_IMPLEMENTATION.md  E0611_Errors.txt  E0611_Errors_RESOLVED.txt  E0611_VERIFICATION_REPORT.md  ERROR_DETECTOR_UPDATE_SUMMARY.md  FEATURE_VERIFICATION_REPORT.md  FINAL_ERROR_RESOLUTION_SUMMARY.md  HARDCODED_PATHS_REPORT.md  INTEL_GPU_AND_ERROR_FIXES.md  IntellicrackErrors.txt  LINTING_FIXES_SUMMARY.md  PATH_DISCOVERY_INTEGRATION_REPORT.md  PATH_UPDATE_SUMMARY.md  Pylint_e_codes.txt  SINGLETON_PATTERN_ANALYSIS.md  USER_INPUT_VALIDATION_FIXES.md  W0201_FIX_SUMMARY.md  __init__.py  activate_gpu.bat  add_gpl_headers.py  add_js_headers.py  analyze_unused.py  benchmark_b580.py  check_conflicts.py  check_dependencies.py  check_linting_progress.py  check_missing_headers.py  comprehensive_mock_analysis_results.md  comprehensive_mock_scan.py  comprehensive_placeholder_analysis_results.md  comprehensive_placeholder_check.py  comprehensive_whitespace_fixer.py  create_pysha3_wheel.py  create_pythonfx_shim.py  (+83 more)
diff_analysis/: ib_aa  ib_ab  ib_ac  ib_ad  ib_ae  ib_af  ib_ag  ib_ah  ib_ai  ib_aj  ib_ak  ib_al  ib_am  ib_an  ib_ao  ib_ap  ib_aq  ib_ar  ib_as  ib_at  ib_au  ib_av  ib_aw  ib_ax  ib_ay  ib_az  ib_ba  ib_bb  ib_bc  ib_bd  ib_be  ib_bf  ib_bg  ib_bh  ib_bi  ib_bj  ib_bk  ib_bl  ib_bm  ib_bn  (+51 more)
docs/: ADVANCED_ANTI_DEBUG_BYPASS.md  ADVANCED_PROTECTION_DETECTION_IMPLEMENTATION.md  AI_COMPLEX_ANALYSIS_INTEGRATION.md  AI_FILE_TOOLS_INTEGRATION.md  AI_HEX_ANALYSIS_IMPLEMENTATION.md  ANGR_ENHANCEMENTS.md  (+92 more)
intellicrack-launcher/: CLIPPY_COMPLETE_SUCCESS.md  CLIPPY_FINAL_SUMMARY.md  CLIPPY_FIXES_SUMMARY.md  CLIPPY_MASTER_SUMMARY.md  CLIPPY_PROGRESS_20251019.md  CLIPPY_PROGRESS_PHASE2.md  CLIPPY_README.md  CLIPPY_ZERO_WARNINGS_ACHIEVED.md  Cargo.toml  build.rs  clippy_after_fmt.txt  clippy_baseline.txt  clippy_current.txt  clippy_final.txt  clippy_full.txt  clippy_output.txt  clippy_output_phase2_start.txt  intellicrack.exe.manifest  intellicrack.rc
intellicrack-launcher/.cargo/: config.toml
intellicrack-launcher/benches/: dependency_benchmarks.rs  performance_benchmarks.rs  process_benchmarks.rs  startup_optimization_benchmarks.rs
intellicrack-launcher/src/: dependencies.rs  diagnostics.rs  environment.rs  flask_validator.rs  gil_safety.rs  intel_gpu.rs  lib.rs  main.rs  platform.rs  preflight_checks.rs  process_manager.rs  process_optimization.rs  python_integration.rs  security.rs  signals.rs  startup_checks.rs  tensorflow_validator.rs  tool_discovery.rs
intellicrack-launcher/tests/: integration.rs  preflight_checks_tests.rs  process_optimization_tests.rs  tool_discovery_tests.rs
scripts/scanner/: .intellicrack_scan_cache.json  .scannerignore  BUG_FIXES_APPLIED.md  Cargo.toml  FP_RATE_ANALYSIS.md  FP_REDUCTION_RESULTS.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_REPORT.md  MANUAL_FP_VERIFICATION.md  MANUAL_REVIEW_FINDINGS.md  PATH_FIX_SUMMARY.md  PHASE_9_COMPLETE.md  PHASE_COMPLETION_SUMMARY.md  README.md  RELIABILITY_ANALYSIS.md  SCANNER_FIX_REPORT.md  SCANNER_IGNORE_IMPLEMENTATION.md  TEST_STATUS.md  TEST_SUITE_VALIDATION.md  TODO.txt  TODO.xml  TODOSCANNER_VERIFICATION_REPORT.md  TROUBLESHOOTING.md  __init__.py  analysis_summary.json  analyze_results.py  clean_scan.txt  diverse_samples.txt  enhanced_analyzer.py  final_scan.txt  final_scan_verified.txt  final_scan_with_ignores.txt  fp_sample_check.txt  full_improved_scan.txt  full_scan_fixed.txt  generate_report.py  improved_scan.json  improved_scan.txt  production_scanner.rs  production_scanner.rs.backup2  (+7 more)
scripts/scanner/.cargo/: config.toml
scripts/scanner/test_suites/: .intellicrack_scan_cache.json  TestScannerJava.java  test_scanner_javascript.js  test_scanner_python.py  test_scanner_rust.rs
scripts/scanner/tests/: integration_test.rs
src/intellicrack/plugins/x64dbg_plugin/: CMakeLists.txt  command_handler.cpp  command_handler.h  event_handler.cpp  event_handler.h  intellicrack_x64dbg.cpp  pipe_server.cpp  pipe_server.h  protocol.h
tools/x64dbg_plugin/: CMakeLists.txt  README.md  command_handler.cpp  command_handler.h  intellicrack_bridge.cpp  intellicrack_bridge.h  pipe_server.cpp  pipe_server.h
(+6142 files in other folders)
